# separable-operator-networks

./: .gitignore  LICENSE.md  README.md  pyproject.toml
data/: README
results/: README
scripts/: README
scripts/generate_test_data/: advection.py  burgers.py  diffusion_reaction.py  heat.py  nonlinear_diffusion.py
scripts/main_scripts/: advection.py  burgers.py  diffusion_reaction.py  heat.py  nonlinear_diffusion.py
scripts/scale_tests/: run_ADV_deeponet.sh  run_ADV_seponet.sh  run_DR_deeponet.sh  run_DR_seponet.sh  run_burgers_deeponet.sh  run_burgers_seponet.sh  run_heat_deeponet.sh  run_heat_seponet.sh  run_nonlinear_diffusion_seponet.sh
src/separable_operator_networks/: __init__.py  eval.py  hvp.py  models.py  train.py  utils.py
src/separable_operator_networks/pde/: __init__.py  advection.py  burgers.py  diffusion_reaction.py  heat.py  nonlinear_diffusion.py
